<resources>
    <string name="app_name">RoleSlayer</string>
    <string name="addCharacterBtn">Add New Character</string>
    <string name="addNewItem">Add Item</string>
    <string name="introTitle">Welcome to RoleSlayer</string>
    <string name="characterHeader">Character List</string>
    <string name="nameLabel">Name:</string>
    <string name="raceLabel">Race:</string>
    <string name="ageLabel">Age:</string>
    <string name="sexLabel">Sex:</string>
    <string name="heightLabel">Height:</string>
    <string name="wtLabel">Weight:</string>
    <string name="descriptionLabel">Description:</string>
    <string name="empty"> </string>
    <string name="basicsHeader">Basics</string>
    <string name="statsHeader">Stats</string>
    <string name="skillsHeader">Skills</string>
    <string name="advDisadHeader">Advantage/Disadvantage</string>
    <string name="inventoryHeader">Inventory</string>
    <string name="notesHeader">Notes</string>
    <string name="itemTypeLabel">Type:</string>
    <string name="itemDmgLabel">DMG:</string>
    <string name="itemWeightLabel">WGT:</string>
    <string name="itemName">Item Name</string>
    <string name="itemType">Item Type</string>
    <string name="itemDmg">Damage</string>
    <string name="itemWeight">Weight</string>
    <string name="itemDescription">Item Description</string>
    <string name="deleteChar">Delete Character</string>

    <string name="stLabel">ST:</string>
    <string name="dxLabel">DX:</string>
    <string name="iqLabel">IQ:</string>
    <string name="htLabel">HT:</string>
    <string name="hpLabel">HP:</string>
    <string name="wilLabel">WIL:</string>
    <string name="perLabel">PER:</string>
    <string name="fpLabel">FP:</string>
    <string name="bsLabel">Basic Speed</string>
    <string name="bmLabel">Basic Move</string>
    <string name="blLabel">Basic Lift</string>
    <string name="thrustLabel">Thrust</string>
    <string name="swingLabel">Swing</string>
    <string name="damageLabel">Damage:</string>
</resources>
