<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CharacterMainPage">

    <TextView
        android:id="@+id/fpLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fpLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/perLabelID"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/statsHeaderID"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/statsHeader"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/damageHeaderID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/damageLabel"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="338dp" />

    <TextView
        android:id="@+id/stLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/stLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statsHeaderID" />

    <TextView
        android:id="@+id/stInputID"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/stLabelID"
        tools:layout_editor_absoluteY="51dp" />

    <!--<ImageView-->
    <!--android:id="@+id/imageView"-->
    <!--android:layout_width="35dp"-->
    <!--android:layout_height="33dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:scaleType="fitXY"-->
    <!--app:layout_constraintBottom_toBottomOf="@+id/nameID"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="@+id/nameID"-->
    <!--app:srcCompat="@android:drawable/ic_menu_edit" />-->

    <TextView
        android:id="@+id/dxLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/dxLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/dxInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="454dp" />

    <TextView
        android:id="@+id/iqLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/iqLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="149dp" />

    <TextView
        android:id="@+id/iqInputID"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/perLabelID"
        app:layout_constraintStart_toEndOf="@+id/iqLabelID"
        app:layout_constraintTop_toBottomOf="@+id/dxInputID" />

    <TextView
        android:id="@+id/htLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/heightLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iqLabelID" />

    <TextView
        android:id="@+id/htInputID"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/fpLabelID"
        app:layout_constraintStart_toEndOf="@+id/htLabelID"
        app:layout_constraintTop_toBottomOf="@+id/iqInputID" />

    <TextView
        android:id="@+id/hpLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hpLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="180dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/hpInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/wilLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/wilLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/hpLabelID"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/wilInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/wilLabelID"
        tools:layout_editor_absoluteY="100dp" />

    <TextView
        android:id="@+id/fpInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/fpLabelID"
        app:layout_constraintTop_toBottomOf="@+id/perInputID" />

    <TextView
        android:id="@+id/perInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="viewStart"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/perLabelID"
        app:layout_constraintTop_toBottomOf="@+id/wilInputID" />

    <TextView
        android:id="@+id/perLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/perLabel"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/wilLabelID"
        tools:layout_editor_absoluteX="180dp" />

    <TextView
        android:id="@+id/descriptionInputID"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/empty"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/blLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/blLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/bsLabelID"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/htLabelID" />

    <TextView
        android:id="@+id/bmLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/bmLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bsLabelID"
        app:layout_constraintTop_toBottomOf="@+id/fpInputID" />

    <TextView
        android:id="@+id/bsLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/bsLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpLabelID" />

    <TextView
        android:id="@+id/bmInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bmLabelID"
        app:layout_constraintStart_toStartOf="@+id/bmLabelID"
        app:layout_constraintTop_toBottomOf="@+id/bmLabelID" />

    <TextView
        android:id="@+id/bsInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bsLabelID"
        app:layout_constraintStart_toStartOf="@+id/bsLabelID"
        app:layout_constraintTop_toBottomOf="@+id/bsLabelID" />

    <TextView
        android:id="@+id/thrustInputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/thrustLabelID"
        app:layout_constraintStart_toStartOf="@+id/thrustLabelID"
        app:layout_constraintTop_toBottomOf="@+id/thrustLabelID" />

    <TextView
        android:id="@+id/blInputID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/blLabelID"
        app:layout_constraintStart_toStartOf="@+id/blLabelID"
        app:layout_constraintTop_toBottomOf="@+id/blLabelID" />

    <TextView
        android:id="@+id/swingInputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/empty"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/swingLabelID"
        app:layout_constraintStart_toStartOf="@+id/swingLabelID"
        app:layout_constraintTop_toBottomOf="@+id/swingLabelID" />

    <TextView
        android:id="@+id/swingLabelID"
        android:layout_width="49dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/swingLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/damageHeaderID" />

    <TextView
        android:id="@+id/thrustLabelID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:text="@string/thrustLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/damageHeaderID" />

</android.support.constraint.ConstraintLayout>