<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <!--<Button-->
            <!--android:id="@+id/deleteItemFromListBtn"-->
            <!--android:layout_width="40dp"-->
            <!--android:layout_height="40dp"-->
            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--android:text="X"-->
            <!--android:textStyle="bold" />-->

        <TextView
            android:id="@+id/itemNameView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="TextView"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/itemDescView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/itemNameView"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemTypeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/itemDescView"
            android:text="@string/itemTypeLabel"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemDmgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescView"
            android:layout_toEndOf="@+id/itemTypeInputView"
            android:text="@string/itemDmgLabel"
            android:textSize="16sp"
            android:paddingLeft="12sp"/>

        <TextView
            android:id="@+id/itemTypeInputView"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescView"
            android:layout_toEndOf="@+id/itemTypeView"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemDmgInputView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescView"
            android:layout_toEndOf="@+id/itemDmgView"
            android:text="TextView"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/itemWeightView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescView"
            android:layout_toEndOf="@+id/itemDmgInputView"
            android:text="@string/itemWeightLabel"
            android:textSize="16sp"
            android:paddingLeft="12sp"/>

        <TextView
            android:id="@+id/itemWeightInputView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemDescView"
            android:layout_toEndOf="@+id/itemWeightView"
            android:text="TextView"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>